<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreboardActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Score X :-0"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/ScoreX">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Score O :-0"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/ScoreO">

        </TextView>

        <Button
            android:id="@+id/backToGame"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="Back to the Game"
            android:textSize="25sp" />


    </LinearLayout>


</RelativeLayout>

